--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 @import-normalize; /* bring in normalize.css styles */
 
+* {
+  margin: 0;
+  padding: 0;
+  /* outline: 1px tomato solid; */
+}
+
 body {
   margin: 0;
+  padding: 30px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +19,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  list-style: none;
 }
