--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,10 +1,10 @@
 .profile {
-  width: fit-content;
-  margin: 0 auto;
+  width: var(--main-width);
+  margin: var(--main-margin);
 
   overflow: hidden;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: var(--box-shadow);
 }
 
 .description {
@@ -17,7 +17,7 @@
   margin-right: auto;
   margin-bottom: 30px;
 
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--main-bg);
   border-radius: 50%;
 }
 
@@ -28,7 +28,7 @@
   font-weight: bold;
   text-align: center;
 
-  color: #313131;
+  color: var(--primary-color);
 }
 
 .tag {
@@ -38,7 +38,7 @@
   font-weight: 500;
   text-align: center;
 
-  color: #939393;
+  color: var(--secondary-color);
 }
 
 .location {
@@ -46,7 +46,7 @@
   font-weight: 500;
   text-align: center;
 
-  color: #939393;
+  color: var(--secondary-color);
 }
 
 .stats {
@@ -58,7 +58,7 @@
   width: 33.33%;
 
   border-top: 1px rgba(0, 0, 0, 0.1) solid;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: var(--main-bg);
 }
 
 .stats > li:not(:last-child) {
@@ -73,7 +73,7 @@
   font-weight: 500;
   text-align: center;
 
-  color: #939393;
+  color: var(--secondary-color);
 }
 
 .quantity {
@@ -83,5 +83,5 @@
   font-weight: bold;
   text-align: center;
 
-  color: #313131;
+  color: var(--primary-color);
 }
