--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 @import-normalize; /* bring in normalize.css styles */
 
+:root {
+  --main-width: 300px;
+  --main-margin: 0 auto 20px;
+  --primary-color: #313131;
+  --secondary-color: #939393;
+  --additional-color: #ffffff;
+  --main-bg: rgba(0, 0, 0, 0.05);
+  --box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 * {
   margin: 0;
   padding: 0;
